--- a/glide.yaml
+++ b/glide.yaml
@@ -3,8 +3,11 @@ import:
 - package: github.com/aws/aws-sdk-go
   version: ^1.5.2
   subpackages:
-  - aws
+    - aws
 - package: github.com/vidsy/kmsconfig
   version: ^1.1.0
 - package: github.com/vidsy/backoff
   version: ~1.0.0
+testImport:
+- package: github.com/stretchr/testify
+  version: ~1.1.4
