--- a/glide.yaml
+++ b/glide.yaml
@@ -1,11 +1,11 @@
 package: github.com/vidsy/awswrappers
 import:
 - package: github.com/aws/aws-sdk-go
-  version: ^1.5.2
+  version: ^1.12.20
   subpackages:
     - aws
-- package: github.com/vidsy/kmsconfig
-  version: ^1.1.0
+- package: github.com/vidsy/go-kmsconfig
+  version: ^3.1.0
 - package: github.com/vidsy/backoff
   version: ~1.0.0
 testImport:
