--- a/circle.yml
+++ b/circle.yml
@@ -1,20 +1,74 @@
-general:
-  branches:
-    ignore:
-      - master
+version: 2
+jobs:
+  build:
+    working_directory: /go/src/github.com/vidsy/awswrappers
+    docker:
+      - image: vidsyhq/go-builder:latest
+        environment:
+          BUILD: false
+    steps:
+      - checkout
+      - restore_cache:
+          key: "dependency-cache-vendor-{{ checksum \"Gopkg.lock\" }}-{{ checksum \"VERSION\" }}"
+      - run: /scripts/build.sh
+      - save_cache:
+          key: "dependency-cache-vendor-{{ checksum \"Gopkg.lock\" }}-{{ checksum \"VERSION\" }}"
+          paths:
+            - vendor
+            - /go/pkg
+  test:
+    working_directory: /go/src/github.com/vidsy/awswrappers
+    docker:
+      - image: vidsyhq/go-builder:latest
+    steps:
+      - checkout
+      - restore_cache:
+          key: "dependency-cache-vendor-{{ checksum \"Gopkg.lock\" }}-{{ checksum \"VERSION\" }}"
+      - run: make test
+  vet:
+    working_directory: /go/src/github.com/vidsy/awswrappers
+    docker:
+      - image: vidsyhq/go-builder:latest
+    steps:
+      - checkout
+      - restore_cache:
+          key: "dependency-cache-vendor-{{ checksum \"Gopkg.lock\" }}-{{ checksum \"VERSION\" }}"
+      - run: make vet
+  check_version:
+    working_directory: /go/src/github.com/vidsy/awswrappers
+    docker:
+      - image: vidsyhq/go-builder:latest
+    steps:
+      - checkout
+      - run: make check-version
 
-machine:
-  environment:
-    DOCKER_IMAGE: vidsyhq/awswrappers
-  services:
-    - docker
-
-dependencies:
-  override:
-    - make build
-
-test:
-  override:
-    - make test_ci
-    - echo "Checking if value of VERSION file exists as Git tag..."
-    - make check-version
+workflows:
+  version: 2
+  build_test:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /[0-9]+\.[0-9]+\.[0-9]+/
+            branches:
+              ignore: master
+      - test:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /[0-9]+\.[0-9]+\.[0-9]+/
+            branches:
+              ignore: master
+      - vet:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /[0-9]+\.[0-9]+\.[0-9]+/
+            branches:
+              ignore: master
+      - check_version:
+          filters:
+            branches:
+              ignore: master
