--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -14,5 +14,9 @@
   name = "github.com/vidsy/go-kmsconfig"
   version = "3.1.0"
 
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.0"
+
 [prune]
   go-tests = true
